RoundTimer + PauseMenu added
PauseMenu added this is a menu used while playing to return to the main
menu.
RoundTimer is a class used for timing a lap.
Start and finish are edited so the timer will be used.
RoundTimer displays the time in left top corner (bit ugly hardcoded).

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\GUIManager.cs" />
+     <Compile Include="Assets\PauseMenu.cs" />
+     <Compile Include="Assets\RoundTimer.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\CarController.cs" />
      <Compile Include="Assets\Scripts\Checkpoint.cs" />
