--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\GUIManager.cs" />
+     <Compile Include="Assets\GameManager.cs" />
      <Compile Include="Assets\PauseMenu.cs" />
      <Compile Include="Assets\RoundTimer.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
@@ -63,6 +64,12 @@
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{DF8E3AA3-F933-C351-3057-55D832D71FF5}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
+      <Project>{5388CD23-0D77-A7B2-F096-3F4E85F70583}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
